changed color scheme of navbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <!-- Header -->
-<div class="Header">
+<div id="Home" class="Header">
 <div class="hero-image">
     <nav role="navigation">
         <div id="burger">
@@ -51,8 +51,8 @@
     </div>
 
     <div class="header-text2">
-        <h1 id="about">About</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, modi! Quibusdam at dignissimos cumque eius nostrum soluta aspernatur fugit sint quasi dicta doloremque repellendus itaque similique culpa, laboriosam assumenda. Placeat?</p>
+        <h1 id="About">About</h1>
+        <p>I consider myself to be a very positive and hardworking person towards life. Since a young age I have been fixing computer and I found a liking towards technology which lead me towards my passion which is programming. I'm a good at thinking out of the box to solve solution and I'm a team player. I'm always open to learn new things about the life of technology to grow and improve my skills.</p>
     </div>
 </div>
 </div>
