added progress bar to skills section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1>I<span>'</span>m</h1>
         <h1>Ashton</h1>
         <h1>English<span>.</span></h1>
-        <h2>Cyber Security and Web Developer</h2>
+        <h2>Cyber Security & Web Developer</h2>
     </div>
 
     <div class="header-text2">
@@ -58,7 +58,29 @@
 </div>
 <div class="container1">
     <div class="con1">
-
+       <h1>Profession Skills</h1>
+       <div class="skill">
+           <h4>Html</h4>
+           <div class="skill-bar">
+               <div class="skillbar value-90"></div>
+           </div>
+       </div>
+       <div class="skill">
+        <h4>Css</h4>
+        <div class="skill-bar">
+            <div class="skillbar value-70"></div>
+        </div>
+    </div> <div class="skill">
+        <h4>Sass</h4>
+        <div class="skill-bar">
+            <div class="skillbar value-80"></div>
+        </div>
+    </div> <div class="skill">
+        <h4>Javascript</h4>
+        <div class="skill-bar">
+            <div class="skillbar value-40"></div>
+        </div>
+    </div>
     </div>
 </div>
 
