--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <a href="#About">
               <li>About</li>
             </a>
-            <a href="#Projects">
-              <li>Projects</li>
-            </a>
             <a href="#Skills">
-              <li>Skills</li>
+              <li>PROFESSION SKILLS</li>
+            </a>
+            <a href="#Project">
+              <li>Projects</li>
             </a>
             <a href="#Education">
               <li>Education</li>
@@ -58,27 +58,28 @@
 </div>
 <div class="container1">
     <div class="con1">
-       <h1>Profession Skills</h1>
+       <h1 id="Skills">Profession Skills</h1>
+       <h3>My knowledge about certain Languages</h3>
        <div class="skill">
            <h4>Html</h4>
            <div class="skill-bar">
-               <div class="skillbar value-90"></div>
+               <div class="skillbar value-90"><p>90%</p></div>
            </div>
        </div>
        <div class="skill">
         <h4>Css</h4>
         <div class="skill-bar">
-            <div class="skillbar value-70"></div>
+            <div class="skillbar value-70"><p>70%</p></div>
         </div>
     </div> <div class="skill">
         <h4>Sass</h4>
         <div class="skill-bar">
-            <div class="skillbar value-80"></div>
+            <div class="skillbar value-80"><p>80%</p></div>
         </div>
     </div> <div class="skill">
         <h4>Javascript</h4>
         <div class="skill-bar">
-            <div class="skillbar value-40"></div>
+            <div class="skillbar value-40"><p>40%</p></div>
         </div>
     </div>
     </div>
