--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
     </div>
     </div>
 </div>
+<div class="container2">
+    <h1>Projects</h1>
+</div>
 
 <script src="js/styles.js"></script>
 </body>
