--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@
     </div>
 </div>
 <div class="container2">
-    <h1>Projects</h1>
+    <div class="con2">
+        <h1>Projects</h1>
+    </div>
+    
 </div>
+
 
 <script src="js/styles.js"></script>
 </body>
