input images into container2

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
 <div class="container2">
     <div class="con2">
         <h1>Projects</h1>
+        <div class="con2-grid">
+            <div> <img src="img/jon.png" alt=""></div>
+            <div><img src="img/code.png" alt=""></div>
+            <div><img src="img/anime.PNG" alt=""></div>
+        </div>
     </div>
     
 </div>
