worked on sizing container 1 to fit on mobile and tablet

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="con2-grid">
             <div> <img src="img/jon.png" alt=""></div>
             <div><img src="img/code.png" alt=""></div>
-            <div><img src="img/anime.PNG" alt=""></div>
+            <div><img class="grid" src="img/anime.PNG" alt=""></div>
         </div>
     </div>
     
