about section i sized to be bigger and moved it into second section

--- a/index.html
+++ b/index.html
@@ -50,13 +50,17 @@
         <h2>Cyber Security & Web Developer</h2>
     </div>
 
-    <div class="header-text2">
-        <h1 id="About">About</h1>
-        <p>I consider myself to be a very positive and hardworking person towards life. Since a young age I have been fixing computer and I found a liking towards technology which lead me towards my passion which is programming. I'm a good at thinking out of the box to solve solution and I'm a team player. I'm always open to learn new things about the life of technology to grow and improve my skills.</p>
-    </div>
+  
 </div>
 </div>
 <div class="container1">
+  <div class="header-text">
+    <div class="text-grid">
+      <div><img src="img/ash.jpg" alt=""></div>
+      <div class="text"><h1 id="About">About</h1>
+        <p>I consider myself to be a very positive and hardworking person towards life. Since a young age I have been fixing computer and I found a liking towards technology which lead me towards my passion which is programming. I'm a good at thinking out of the box to solve solution and I'm a team player. I'm always open to learn new things about the life of technology to grow and improve my skills.</p></div>
+  </div>
+</div>
     <div class="con1">
        <h1 id="Skills">Profession Skills</h1>
        <h3>My knowledge about certain Languages</h3>
@@ -140,10 +144,6 @@
 
 </div>
 
-<div class="container4"> 
-  <h1>Contact</h1>
-
-</div> 
 
 <script src="js/styles.js"></script>
 </body>
