made a hovering effect over project section images

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css ">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css "> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
     <title>Ashton English|Online Portfolio</title>
 </head>
@@ -49,6 +52,7 @@
         <h1>English<span>.</span></h1>
         <h2>Cyber Security & Web Developer</h2>
     </div>
+    <i class="fas fa-chevron-down"></i>
 
   
 </div>
@@ -92,9 +96,33 @@
     <div class="con2">
         <h1>Projects</h1>
         <div class="con2-grid">
-            <div> <img src="img/jon.png" alt=""></div>
-            <div><img src="img/code.png" alt=""></div>
-            <div><img class="grid" src="img/anime.PNG" alt=""></div>
+            <div class="hover-image"> 
+              <a href="https://ashtonenglish3.github.io/jon-chreiten/index.html">
+                <div class="hover-overlay"></div>
+                <img class="image-opc" src="img/jon.png" alt="">
+                <div class="hover-details fadein-bottom ">
+                  <h3 class="hover-title">Jon Chretien</h3>
+                </div>
+              </a>
+            </div>
+            <div class="hover-image"> 
+              <a href="https://ashtonenglish3.github.io/jon-chreiten/index.html">
+                <div class="hover-overlay"></div>
+                <img class="image-opc" src="img/code.png" alt="">
+                <div class="hover-details fadein-bottom ">
+                  <h3 class="hover-title">Code4CT</h3>
+                </div>
+              </a>
+            </div>
+            <div class="hover-image"> 
+              <a href="https://ashtonenglish3.github.io/jon-chreiten/index.html">
+                <div class="hover-overlay"></div>
+                <img class="image-opc" src="img/anime.PNG" alt="">
+                <div class="hover-details fadein-bottom ">
+                  <h3 class="hover-title">Anime Blog</h3>
+                </div>
+              </a>
+            </div>
         </div>
 
         <div class="con3-head"><h1 id="Education">Education</h1></div>
