added links to images

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </a>
             </div>
             <div class="hover-image"> 
-              <a href="https://ashtonenglish3.github.io/jon-chreiten/index.html">
+              <a href="https://ashtonenglish3.github.io/code4ct/index.html">
                 <div class="hover-overlay"></div>
                 <img class="image-opc" src="img/code.png" alt="">
                 <div class="hover-details fadein-bottom ">
@@ -115,7 +115,7 @@
               </a>
             </div>
             <div class="hover-image"> 
-              <a href="https://ashtonenglish3.github.io/jon-chreiten/index.html">
+              <a href="https://mighty-headland-36628.herokuapp.com/">
                 <div class="hover-overlay"></div>
                 <img class="image-opc" src="img/anime.PNG" alt="">
                 <div class="hover-details fadein-bottom ">
