removed progress bars and replaced it with icons

--- a/index.html
+++ b/index.html
@@ -67,30 +67,14 @@
 </div>
     <div class="con1">
        <h1 id="Skills">Profession Skills</h1>
-       <h3>My knowledge about certain Languages</h3>
-       <div class="skill">
-           <h4>Html</h4>
-           <div class="skill-bar">
-               <div class="skillbar value-90"><p>90%</p></div>
-           </div>
-       </div>
-       <div class="skill">
-        <h4>Css</h4>
-        <div class="skill-bar">
-            <div class="skillbar value-70"><p>70%</p></div>
-        </div>
-    </div> <div class="skill">
-        <h4>Sass</h4>
-        <div class="skill-bar">
-            <div class="skillbar value-80"><p>80%</p></div>
-        </div>
-    </div> <div class="skill">
-        <h4>Javascript</h4>
-        <div class="skill-bar">
-            <div class="skillbar value-40"><p>40%</p></div>
-        </div>
+   <div class="skills-section">
+     <div class="skills-sub">
+     <img src="img/html3.png" alt="">
+     <img src="img/css.png" alt="">
+     <img src="img/sass2.png" alt="">
+     <img src="img/java2.png" alt="">
     </div>
-    </div>
+   </div>
 </div>
 <div class="container2">
     <div class="con2">
