made a footer section

--- a/index.html
+++ b/index.html
@@ -150,10 +150,26 @@
 
     </div>
     
+    
 
     <!-- Timeline -->
 
 
+</div>
+<div class="footer">
+  <h1 id="Contact">Contact</h1>
+  <div class="contact1">
+    <a href="https://www.linkedin.com/in/ashton-english-779285165/" target="_blank" class="icon facebook">
+      <span>Linkedin</span><img src="img/linkdin.png" class="icon1" alt=""></a>
+    <a href="https://github.com/Ashtonenglish3" target="_blank" class="icon github">
+      <span>GitHub</span><img src="img/github2.png" class="icon1" alt=""></a>
+
+    <a>
+      <span>0619124191</span><img src="img/phone2.png" class="icon1" alt=""></a>
+    <a href="http://www.pinterest.com" class="icon pinterest">
+      <span>ashtonenglish3@gmail.com</span><img src="img/mail.png" class="icon1" alt=""></a>
+  </div>
+</div>
 </div>
 
 
