--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1>I<span>'</span>m</h1>
         <h1>Ashton</h1>
         <h1>English<span>.</span></h1>
-        <h2>Cyber Security & Web Developer</h2>
+        <h2>Web Developer</h2>
     </div>
     <i class="fas fa-chevron-down"></i>
 
@@ -170,8 +170,11 @@
       <span>ashtonenglish3@gmail.com</span><img src="img/mail.png" class="icon1" alt=""></a>
   </div>
 </div>
-</div>
 
+
+<div class="copy">
+  <h4>Copyright © Ashton English</h4>
+</div>
 
 <script src="js/styles.js"></script>
 </body>
