made a down arrow button in head

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+<div><a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect"></a><a href="https://www.flaticon.com/" title="Flaticon"></a></div>
 
     <title>Ashton English|Online Portfolio</title>
 </head>
@@ -52,7 +53,7 @@
         <h1>English<span>.</span></h1>
         <h2>Web Developer</h2>
     </div>
-    <i class="fas fa-chevron-down"></i>
+ <a href="#About"><img class="arrow bounce" src="img/down-arrow (1).png" alt=""></a>   
 
   
 </div>
