styled header for mobile view

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> 
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css "> -->
@@ -34,7 +34,7 @@
             <a href="#Skills">
               <li>PROFESSION SKILLS</li>
             </a>
-            <a href="#Project">
+            <a href="#Projects">
               <li>Projects</li>
             </a>
             <a href="#Education">
@@ -77,9 +77,10 @@
     </div>
    </div>
 </div>
+</div>
 <div class="container2">
     <div class="con2">
-        <h1>Projects</h1>
+        <h1 id="Projects">Projects</h1>
         <div class="con2-grid">
             <div class="hover-image"> 
               <a href="https://ashtonenglish3.github.io/jon-chreiten/index.html">
