styled text in container 3 to fit the screen

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <a>
       <span>0619124191</span><img src="img/phone2.png" class="icon1" alt=""></a>
-    <a href="http://www.pinterest.com" class="icon pinterest">
+    <a href="" class="icon pinterest">
       <span>ashtonenglish3@gmail.com</span><img src="img/mail.png" class="icon1" alt=""></a>
   </div>
 </div>
