styled text in container 3 to fit the screen

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="dot"></div>
             <div class="time-text">
               <h5>Aug 2018 - Feb 2019</h5>
-              <h2>Salesian life Choices</h2>
+              <h2> life Choices</h2>
               <h4>Course: Front end web development</h4>
               
               <p>Subjects: Programming, professional development, design thinking </p>
