--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
        <h1 id="Skills">Profession Skills</h1>
    <div class="skills-section">
      <div class="skills-sub">
-     <img src="img/html3.png" alt="">
-     <img src="img/css.png" alt="">
-     <img src="img/sass2.png" alt="">
-     <img src="img/java2.png" alt="">
+     <img src="img/html.png" alt="">
+     <img src="img/css1.png" alt="">
+     <img src="img/sass3.png" alt="">
+     <img src="img/js.png" alt="">
     </div>
    </div>
 </div>
