changes skill icons

--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
     <div class="text-grid">
       <div><img src="img/ash.jpg" alt=""></div>
       <div class="text"><h1 id="About">About</h1>
-        <p>I consider myself to be a very positive and hardworking person towards life. Since a young age I have been fixing computer and I found a liking towards technology which lead me towards my passion which is programming. I'm a good at thinking out of the box to solve solution and I'm a team player. I'm always open to learn new things about the life of technology to grow and improve my skills.</p></div>
+        <p>I consider myself to be a very positive and hardworking person towards life. Since a young age I have been fixing computers and I found a liking towards technology which lead me towards my passion which is programming. I'm good at thinking out of the box to solve solution and I'm a team player. I'm always open to learn new things about the life of technology to grow and improve my skills.</p></div>
   </div>
 </div>
     <div class="con1">
        <h1 id="Skills">Profession Skills</h1>
    <div class="skills-section">
      <div class="skills-sub">
-     <img src="img/html.png" alt="">
-     <img src="img/css1.png" alt="">
-     <img src="img/sass3.png" alt="">
-     <img src="img/js.png" alt="">
+     <img src="img/html3.png" alt="">
+     <img src="img/css.png" alt="">
+     <img src="img/sass2.png" alt="">
+     <img src="img/java2.png" alt="">
     </div>
    </div>
 </div>
