added more text and worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <h5>Jan - Dec 2018</h5>
               <h2>Grow Leadership College</h2>
               
-              <p>Subjects: Leaderhip, Digital Skills</p>
+              <p>Subjects: Leaderhip, Digital Skills, Entrepreneurship</p>
             </div>
           </div>
 
