--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="time time-left">
             <div class="dot"></div>
             <div class="time-text-left">
-              <h5>Dec 2019 - Nov 2020</h5>
+              <h5>17 Feb 2020 - Nov 2020</h5>
               <h2>Younglings</h2>
               
               <p>Subjects: Web Design, Cybersecurity</p>
