worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
   </div>
 </div>
     <div class="con1">
-       <h1 id="Skills">Profession Skills</h1>
-   <div class="skills-section">
+       <h1>Profession Skills</h1>
+   <div id="Skills" class="skills-section">
      <div class="skills-sub">
      <img src="img/html3.png" alt="">
      <img src="img/css.png" alt="">
